--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,7 +262,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("assets/img/hero-bg.jpg") top center no-repeat;
+  background: url("../img/hero-bg.JPG") top center no-repeat;
   background-size: cover;
   position: relative;
 }
